@@ -19,4 +19,5 @@ BUGFIXES:
 004 ==> 404578 - Links broken on downloadpage for 6.0.0.
 005 ==> 402069 - FAQ link on Support page is broken.
 006 ==> 404503 - There is a typo in support section of website.
-007 ==> 
+007 ==> 404621 - I can not import the album Google Photo.
+008 ==> 
